--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Petgram project from react advanced course at Platzi.com",
   "main": "src/index.js",
   "scripts": {
+    "vercel-build": "npm run build",
+    "lint": "standard",
     "build": "webpack",
     "dev": "webpack-dev-server --open --development",
     "test": "echo \"Error: no test specified\" && exit 1"
