--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "vercel-build": "npm run build",
     "lint": "standard",
     "build": "webpack",
-    "dev": "webpack-dev-server --open --development",
+    "dev": "webpack-dev-server --open --development --history-api-fallback",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.3.0",
     "intersection-observer": "^0.11.0",
