--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "standard",
     "build": "webpack",
     "dev": "webpack-dev-server --open --development --history-api-fallback",
+    "serve:dev": "webpack --mode 'development' && npx serve dist -s",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
