--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "graphql": "^15.3.0",
     "intersection-observer": "^0.11.0",
     "nprogress": "^0.2.0",
-    "react": "^17.0.1",
+    "react": "16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
