--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "prop-types": "^15.7.2",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-pwa-manifest": "^4.2.0"
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
