--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-pwa-manifest": "^4.2.0"
+    "webpack-pwa-manifest": "^4.2.0",
+    "workbox-webpack-plugin": "^5.1.4"
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
