--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack",
     "dev": "webpack-dev-server --open --development --history-api-fallback",
     "serve:dev": "webpack --mode 'development' && npx serve dist -s",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cypress open"
   },
   "keywords": [
     "petgram"
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "cypress": "^5.5.0",
     "html-webpack-plugin": "^4.4.1",
     "prop-types": "^15.7.2",
     "webpack": "^4.44.1",
